Fix tracking code overflow

--- a/resources/views/mail/templates/html/themes/wai.css
+++ b/resources/views/mail/templates/html/themes/wai.css
@@ -124,6 +124,8 @@ code {
   font-size: 87.5%;
   color: #17324d;
   word-break: break-word;
+  display: block;
+  overflow: auto;
 }
 
 .container,
